--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=catalogo_db_login
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.jpa.hibernate.ddl-auto = update
