Alterando o gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,5 +43,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Grant execute permission to gradlew
+      run: chmod +x ./gradlew
+
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582
